<legend> tags are the stuff of nightmares to style in IE

--- a/app/views/refinery/memberships/members/_form_account.html.erb
+++ b/app/views/refinery/memberships/members/_form_account.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend><%=t('refinery.members.shared.account')%></legend>
+  <h1><%=t('refinery.members.shared.account')%></h1>
   <ol>
     <li>
       <%= f.required_label :email %>
