--- a/app/views/refinery/memberships/members/_form_organization.html.erb
+++ b/app/views/refinery/memberships/members/_form_organization.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend><%=t('refinery.members.shared.organization')%></legend>
+  <h1><%=t('refinery.members.shared.organization')%></h1>
   <ol>
     <li>
       <%= f.label :organization %>
