--- a/app/views/refinery/memberships/admin/members/_members_table.html.erb
+++ b/app/views/refinery/memberships/admin/members/_members_table.html.erb
@@ -1,14 +1,14 @@
 <table id="members" cellpadding="0" cellspacing="0" style="visibility: hidden; width: 650px;">
   <thead>
     <tr>
-      <th data-column-id="name" align="center" class="sortable"><%= Member.human_attribute_name :name %></th>
-      <th data-column-id="organization" align="center" class="sortable"><%= Member.human_attribute_name :organization %></th>
-      <th data-column-id="email" align="center" class="sortable"><%= Member.human_attribute_name :email %></th>
-      <th data-column-id="created_at" align="center" class="sortable"><%= Member.human_attribute_name :created_at %></th>
+      <th data-column-id="name" align="center" class="sortable"><%= Refinery::Memberships::Member.human_attribute_name :name %></th>
+      <th data-column-id="organization" align="center" class="sortable"><%= Refinery::Memberships::Member.human_attribute_name :organization %></th>
+      <th data-column-id="email" align="center" class="sortable"><%= Refinery::Memberships::Member.human_attribute_name :email %></th>
+      <th data-column-id="created_at" align="center" class="sortable"><%= Refinery::Memberships::Member.human_attribute_name :created_at %></th>
       <% if Refinery::Setting::find_or_set('memberships_timed_accounts', true) %>
-      <th data-column-id="member_until" align="center" class="sortable"><%= Member.human_attribute_name :member_until %></th>
+      <th data-column-id="member_until" align="center" class="sortable"><%= Refinery::Memberships::Member.human_attribute_name :member_until %></th>
       <% end %>
-      <th data-column-id="status" align="center" class="sortable width_35"><%= Member.human_attribute_name :status %></th>
+      <th data-column-id="status" align="center" class="sortable width_35"><%= Refinery::Memberships::Member.human_attribute_name :status %></th>
       <th data-column-id="actions" align="center" class="width_30"></th>
     </tr>
   </thead>
