correct path to partials under /refinery

--- a/app/views/refinery/memberships/admin/members/_members_table.html.erb
+++ b/app/views/refinery/memberships/admin/members/_members_table.html.erb
@@ -13,6 +13,6 @@
     </tr>
   </thead>
   <tbody>
-    <%= render :partial => 'admin/members/member', :collection => @members if @members %>
+    <%= render :partial => '/refinery/memberships/admin/members/member', :collection => @members if @members %>
   </tbody>
 </table>
