--- a/app/views/refinery/memberships/admin/members/index.html.erb
+++ b/app/views/refinery/memberships/admin/members/index.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <% content_for :javascripts do %>
-  <%= javascript_include_tag ['jquery.cookie.js', 'membership.jquery.js','jquery.event.drag-2.0.min.js', 'slick.core.js', 'slick.grid.js'] %>
+  <%= javascript_include_tag 'jquery.cookie.js', 'refinery/memberships/membership.jquery.js','jquery.event.drag-2.0.min.js', 'slick.core.js', 'slick.grid.js' %>
   <script>
   $(function(){
     $("#members").slickGrid();
