--- a/app/views/refinery/memberships/admin/members/_form.html.erb
+++ b/app/views/refinery/memberships/admin/members/_form.html.erb
@@ -19,6 +19,7 @@
   :f => f,
   :continue_editing => false,
   :hide_cancel => (@app_dialog or action_name == "insert" or from_dialog?),
+  :delete_url => refinery.admin_member_url,
   :delete_title => t('delete', :scope => 'refinery.admin.members'),
   :delete_confirmation => (t('message', :scope => 'refinery.admin.delete',
   :title => @member.full_name) if @member.persisted?)
