--- a/app/views/refinery/memberships/admin/memberships/settings.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/settings.html.erb
@@ -36,9 +36,9 @@
 <% end %>
 </div>
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag 'settings_dialog'%>
+  <%= stylesheet_link_tag 'refinery/memberships/settings_dialog'%>
 <% end %>
 
 <% content_for :javascripts do %>
-  <%= javascript_include_tag 'settings_dialog'%>
+  <%= javascript_include_tag 'refinery/memberships/settings_dialog'%>
 <% end %>
