--- a/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
+++ b/app/views/refinery/memberships/admin/membership_emails/_email_body_help.html.erb
@@ -9,20 +9,20 @@
 <div id='more_options' style="display:none;">
 	<h2><%= t('email_body_help_title', :scope => 'refinery.admin.membership_emails') %></h2>
 	<p>
-	<%= t('.email_body_help') %>
+	<%= t('email_body_help', :scope => 'refinery.admin.membership_emails.email_body_help') %>
 	</p>
-	<h2><%= t('.available_tags') %></h2>
+	<h2><%= t('available_tags', :scope => 'refinery.admin.membership_emails.email_body_help') %></h2>
 	<p>
-	<%= t('.user_data') %>: [:email], [:first_name], [:last_name], [:title], [:organization], [:street_address], [:city], [:province], [:postal_code], [:phone], [:fax], [:website]
+	<%= t('user_data', :scope => 'refinery.admin.membership_emails.email_body_help') %>: [:email], [:first_name], [:last_name], [:title], [:organization], [:street_address], [:city], [:province], [:postal_code], [:phone], [:fax], [:website]
 	</p>
 	<% if Refinery::Setting.find_or_set('memberships_timed_accounts', true) %>
 	<p>
-  <%= t('.member_until') %>: [:member_until]
+    <%= t('member_until', :scope => 'refinery.admin.membership_emails.email_body_help') %>: [:member_until]
 	</p>
 	<% end %>
 	<% if Refinery::Setting.find_or_set('memberships_confirmation', 'admin') == 'email' %>
 	<p>
-	<%= t('.activation_url') %>: [:activation_url]
+	<%= t('activation_url', :scope => 'refinery.admin.membership_emails.email_body_help') %>: [:activation_url]
 	</p>
 	<% end %>
 
