--- a/app/views/refinery/memberships/members/_form_profile.html.erb
+++ b/app/views/refinery/memberships/members/_form_profile.html.erb
@@ -27,7 +27,7 @@
       <% if @is_admin %>
         <%= f.text_field :membership_level %>&nbsp;
       <% else %>
-        <%= @member.membership_level %>&nbsp;
+        <%= @member.roles.collect(&:title).join(', ') %>&nbsp;
       <% end %>
     </li>
     <% end %>
