fix i18n key in profile edit form

--- a/app/views/refinery/memberships/members/_form_account.html.erb
+++ b/app/views/refinery/memberships/members/_form_account.html.erb
@@ -5,7 +5,7 @@
       <%= f.required_label :email %>
       <%= f.text_field :email %>&nbsp;
     </li>
-    <%= "<li><span class='preview'>#{t('admin.users.form.blank_password_keeps_current')}</span></li>".html_safe if @member.persisted? %>
+    <%= "<li><span class='preview'>#{t('members.form.blank_password_keeps_current', :scope => 'refinery.memberships')}</span></li>".html_safe if @member.persisted? %>
     <li>
       <%= f.required_label :password %>
       <%= f.password_field :password, :autocomplete => 'off' %>&nbsp;
