fix members#update action and notification mailer
routes and mailer view were missing and broken

--- a/app/views/refinery/memberships/members/profile.html.erb
+++ b/app/views/refinery/memberships/members/profile.html.erb
@@ -1,4 +1,5 @@
 <% content_for :body_content_left do %>
+    <%= render :partial => 'message' %>
   <%=raw @page.content_for(:body_above) if @page %>
   <%=raw @page.content_for(:body) if @page %>
   <div id="member">
@@ -6,7 +7,7 @@
     <%= render :partial => "static_profile" %>
     <%= render :partial => "static_organization" %>
   </div>
-  <%= link_to t('.edit_profile'), profile_members_path %>
+  <%= link_to t('.edit_profile'), edit_members_path %>
   <%=raw @page.content_for(:body_below) if @page %>
 <% end %>
 
