--- a/app/views/refinery/memberships/membership_mailer/member_created_admin.text.erb
+++ b/app/views/refinery/memberships/membership_mailer/member_created_admin.text.erb
@@ -1,4 +1,4 @@
-New user registration on <%=Refinery::Setting::get('site_name')%>
+<%= controller.action_name =~ /created/ ? 'New' : 'Updated' %> user registration on <%= Refinery::Core.site_name %>
 
 Email: <%=@member.email%>
 
