Revert "settings fix, set radios for default role correctly"
it is storing the role id's in settings, which is better

This reverts commit 658a10d7260e1601842c362f68e0bfb7081fa745.

--- a/app/views/refinery/memberships/admin/memberships/_settings_groups.html.erb
+++ b/app/views/refinery/memberships/admin/memberships/_settings_groups.html.erb
@@ -14,7 +14,7 @@
           <tr>
         <% end %>
         <td>
-          <% is_active = @memberships_default_roles.value.include?(role.title) %>
+          <% is_active = @memberships_default_roles.value.include?(role.id) %>
           <input id="role_cb_<%= role.id %>" type="checkbox" name="memberships_default_roles[value][]" value="<%= role.id %>" >
           <label for="role_cb_<%= role.id %>"><%= role.title %></label>
         </td>
