--- a/app/views/refinery/memberships/admin/members/_form_account.html.erb
+++ b/app/views/refinery/memberships/admin/members/_form_account.html.erb
@@ -8,7 +8,7 @@
   <p class="field">
       <%= f.label :password %>
       <%= f.password_field :password, :autocomplete => 'off', :class => 'widest' %><br />
-      <span class='preview'><%= t('admin.users.form.blank_password_keeps_current') %></span>
+      <span class='preview'><%= t('refinery.memberships.members.form.blank_password_keeps_current') %></span>
   </p>
   <p class="field">
       <%= f.label :password_confirmation %>
