--- a/app/views/refinery/memberships/members/_form_organization.html.erb
+++ b/app/views/refinery/memberships/members/_form_organization.html.erb
@@ -14,12 +14,12 @@
       <%= f.text_field :city %>&nbsp;
     </li>
     <li>
-      <%= f.label :province %>
-      <%= f.select :province, options_for_select(Provinces::CODES) %>&nbsp;
+      <%= f.label :province, t('members.form.state_province', :scope => 'refinery.memberships') %>
+      <%= f.text_field :province, :class => 'state_abbr', :size => 4 %>
     </li>
     <li>
-      <%= f.label :postal_code %>
-      <%= f.text_field :postal_code %>&nbsp;
+      <%= f.label :postal_code, t('members.form.postal_code', :scope => 'refinery.memberships')  %>
+      <%= f.text_field :postal_code, :class => 'postal_code', :size => 10 %>
     </li>
     <li>
       <%= f.label :website %>
